2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/24_ApMethod.deca
// Description:
//    Programme : appel d'une methode qui prend en paramètre int
// Resultats:
//      Programme correcte  
//
// Historique:
//    cree le 18/01/2024
class A {
    int x;
    void setX(int x)
    {
        this.x =x;
    }
}

{
    A a = new A();
    a.setX(1+3);
}