2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/52_DecalClaassAvecParam.deca
// Description:
//    Programme : initialisation d'une classe avec paramètre
// Resultats:
//      Programme incorrecte syntaxiquement :13:16: mismatched input '2' expecting ')'
// Historique:
//    cree le 19/01/2023
class A {
    int x,y;

}

{
    A a = new A(2,3);
}